Added links to logos

--- a/dscovr-ace-visualizer/index.html
+++ b/dscovr-ace-visualizer/index.html
@@ -24,17 +24,29 @@
 </head>
 
 <body>
-  
+
   <header>
-    
+
     <!-- LOGOS -->
 
     <div class="logos">
-      <img src="imgs/DSCOVR-Logo.png" alt="USRA" class="logo">
-      <img src="imgs/ACE_mission_logo.png" alt="USRA" class="logo">
-      <img src="imgs/noaa_logo.png" alt="NOAA" class="logo">
-      <img src="imgs/nasa_logo.png" alt="NSF" class="logo">
-      <img src="imgs/nws_logo.png" alt="USRA" class="logo">
+      <a
+        href="https://www.nesdis.noaa.gov/current-satellite-missions/currently-flying/dscovr-deep-space-climate-observatory">
+        <img src="imgs/DSCOVR-Logo.png" alt="USRA" class="logo">
+      </a>
+      <a
+        href="https://solarsystem.nasa.gov/missions/ace/in-depth/#:~:text=NASA's%20Advanced%20Composition%20Explorer%20(ACE,evolution%20of%20the%20solar%20system.">
+        <img src="imgs/ACE_mission_logo.png" alt="USRA" class="logo">
+      </a>
+      <a href="https://www.noaa.gov/">
+        <img src="imgs/noaa_logo.png" alt="NOAA" class="logo">
+      </a>
+      <a href="https://www.nasa.gov/">
+        <img src="imgs/nasa_logo.png" alt="NSF" class="logo">
+      </a>
+      <a href="https://www.weather.gov/">
+        <img src="imgs/nws_logo.png" alt="USRA" class="logo">
+      </a>
     </div>
   </header>
 
@@ -54,10 +66,18 @@
       <h2>INFO</h2>
 
       <p>
-        This graph is designed to give a visual representation of the locations of two space weather satellites orbting the sun. It uses real-time data from the <a href="https://www.swpc.noaa.gov/products/ace-real-time-solar-wind">NOAA Space Weather Prediction Center</a> and the <a href="https://www.swpc.noaa.gov/products/dscovr-real-time-solar-wind">DSCOVR/ACE</a> satellites. The default view is looking at the satellites from the Earth's perspective, but you can also view the satellites from the Sun's perspective by clicking and dragging. 
+        This graph is designed to give a visual representation of the locations of two space weather satellites orbting
+        the sun. It uses real-time data from the <a
+          href="https://www.swpc.noaa.gov/products/ace-real-time-solar-wind">NOAA Space Weather Prediction Center</a>
+        and the <a href="https://www.swpc.noaa.gov/products/dscovr-real-time-solar-wind">DSCOVR/ACE</a> satellites. The
+        default view is looking at the satellites from the Earth's perspective, but you can also view the satellites
+        from the Sun's perspective by clicking and dragging.
       </p>
       <p>
-        The mission of the DSCOVR/ACE satellites is to monitor the sun and its effects on Earth. The DSCOVR/ACE satellites are part of the <a href="https://www.swpc.noaa.gov/">NOAA Space Weather Prediction Center</a> and are funded by the <a href="https://www.nasa.gov/">NASA</a>, <a href="https://www.noaa.gov/">NOAA</a>, and <a href="https://www.nsf.gov/">NSF</a>.
+        The mission of the DSCOVR/ACE satellites is to monitor the sun and its effects on Earth. The DSCOVR/ACE
+        satellites are part of the <a href="https://www.swpc.noaa.gov/">NOAA Space Weather Prediction Center</a> and are
+        funded by the <a href="https://www.nasa.gov/">NASA</a>, <a href="https://www.noaa.gov/">NOAA</a>, and <a
+          href="https://www.nsf.gov/">NSF</a>.
       </p>
       <p>
         https://en.wikipedia.org/wiki/Lagrange_point
