Cleaned guessing game a little

--- a/guessing/index.html
+++ b/guessing/index.html
@@ -16,11 +16,10 @@
         <h2 class="subtitle">Guess A Number Between 1-100!</h2>
 
         <input class="guess-input" type="number" />
-        <button class="guess-button">Guess</button>
+        <button class="guess-button">GUESS</button>
         <p class="feedback"></p>
         <p class="guess-list">Previous Guesses: </p>
-        <h3 class="counter-title">Number of Guesses</h3>
-        <p class="count"></p>
+        <h3 class="counter-title">Number of Guesses <p class="count"></p></h3>
         <ul>
             <li></li>
             <li></li>
