Musical-matter added

--- a/projects.html
+++ b/projects.html
@@ -31,6 +31,21 @@
     <main>
         <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
         <section class="proj-wrapper">
+            <h2 class="proj-title">Musical Matter
+            </h2>
+            <hr>
+            
+            <p class="proj-text">Physics and Audio in a fun little time waster package. Made with Matter.js and Tone.js.
+            </p>
+            <a href="musical-matter/index.html" target="_blank" rel="noopener noreferrer"><img
+                    alt="musical-matter" class="proj-img" src="imgs/matter.png" /></a>
+            <div class="proj-text-wrapper">
+                <p class="proj-text"></p>
+            </div>
+        </section>
+
+
+        <section class="proj-wrapper">
             <h2 class="proj-title">3D Satellite Visualizer
             </h2>
             <hr>
