--- a/musical-matter/index.html
+++ b/musical-matter/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <!-- <img src="windchime.png" alt="Matter.js" width="100vw" height="100vh"> -->
-
+<h1>CLICK OR TAP ANYWHERE!</h1>
     <script src="https://unpkg.com/tone"></script>
     <script src="music.js"></script>
     <script src="index.js"></script>
