--- a/musical-matter/index.html
+++ b/musical-matter/index.html
@@ -6,12 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Physics Engine for JavaScript - Matter.js - CodeBrainer</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.js" integrity="sha512-kTA5As3DFbe7Gz6vIpsyaWjX9WSEKeyGigJkmzlQDIUVlPV5ceFxKHG+CAXvbxQvd8iVWJ6nS5egDw1WCss4Sw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.18.0/matter.js"
+        integrity="sha512-kTA5As3DFbe7Gz6vIpsyaWjX9WSEKeyGigJkmzlQDIUVlPV5ceFxKHG+CAXvbxQvd8iVWJ6nS5egDw1WCss4Sw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
 
 <body>
     <!-- <img src="windchime.png" alt="Matter.js" width="100vw" height="100vh"> -->
-<h1>CLICK OR TAP ANYWHERE!</h1>
+    <h1>CLICK OR TAP ANYWHERE!</h1>
+    <canvas id="canvas"></canvas>
     <script src="https://unpkg.com/tone"></script>
     <script src="music.js"></script>
     <script src="index.js"></script>
