Home page update

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 
 
         <div class="coffee-text-container">
-            <h3 class="coffee-text">Hi, I'm Kenny and I like making coffee and fun websites. Take a look around! I
-                work mostly with Javascript and I am currently learning React. </h3>
+            <h3 class="coffee-text">Hi, I'm Kenny and I like making fun websites. Take a look around! I
+                work mostly with Javascript and React. </h3>
 
             <br>
             <br>
