--- a/dscovr-ace-visualizer/index.html
+++ b/dscovr-ace-visualizer/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <!-- add favicon -->
-  <link rel="shortcut icon" href="imgs/sun.jpeg" type="image/x-icon">
+  <link rel="shortcut icon" href="imgs/sun.png" type="image/x-icon">
 
   <!-- Load jQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
