--- a/dscovr-ace-visualizer/index.html
+++ b/dscovr-ace-visualizer/index.html
@@ -16,9 +16,9 @@
 
   <script src="https://code.highcharts.com/highcharts.src.js"></script>
   <script src="https://code.highcharts.com/highcharts-3d.js"></script>
-  <!-- <script src="https://code.highcharts.com/modules/exporting.js"></script>
+  <script src="https://code.highcharts.com/modules/exporting.js"></script>
   <script src="https://code.highcharts.com/modules/export-data.js"></script>
-  <script src="https://code.highcharts.com/modules/accessibility.js"></script> -->
+  <script src="https://code.highcharts.com/modules/accessibility.js"></script>
   <link rel="stylesheet" href="style.css">
 </head>
 
