added Google tag

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <main class="container">
         <h1 class="name-logo"><a href="/">Kenny Johnson</a></h1>
-        <h2 class="sub-heading"> Designer ␥ Developer </h2>
+        <h2 class="sub-heading"> Developer </h2>
 
         <!--Wave Container-->
         <div class="wave-container">
@@ -56,7 +56,7 @@
         </div>
         <!--Waves end-->
 
- 
+
 
 
         <div class="coffee-text-container">
@@ -83,7 +83,7 @@
             <hr>
         </div>
 
-   
+
     </main>
 
     <footer>
@@ -95,6 +95,15 @@
     </footer>
 
     <script src="script.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7MXGVF01SZ"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-7MXGVF01SZ');
+    </script>
 </body>
 
 </html>
