Resizing is working but loading the chart narrow

--- a/dscovr-ace-visualizer/index.html
+++ b/dscovr-ace-visualizer/index.html
@@ -52,9 +52,11 @@
   <main>
 
     <!-- CHART -->
-
+    
     <figure class="highcharts-figure">
-      <div id="container"></div>
+      <div class="wrapper">
+        <div id="container"></div>
+      </div>
       <p class="highcharts-description">
       </p>
     </figure>
